fix(spacing): Corrected some spacing

--- a/src/app/(landing)/p/post.module.scss
+++ b/src/app/(landing)/p/post.module.scss
@@ -3,6 +3,10 @@
     margin-bottom: 30px;
     outline: none;
 
+    & > * {
+        margin: 0 15px;
+    }
+
     .header {
         z-index: 1;
         font-weight: bold;
