--- a/src/components/Paragraph.module.scss
+++ b/src/components/Paragraph.module.scss
@@ -1,7 +1,7 @@
 .Paragraph {
     line-height: 32px;
     font-size: 20px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     font-weight: 400;
     word-break: break-word;
     text-indent: 35px;
@@ -11,5 +11,6 @@
         font-size: 18px;
         line-height: 28px;
         letter-spacing: -0.054px;
+        margin-bottom: 10px;
     }
 }
